k8s/amecafe-microfront/amecafe-microfront-ingress-dev.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-amecafe-microfront-ingress-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: front.v30.ultrasist.net
    http:
      paths:
      - path: /amecafe
        pathType: Prefix
        backend:
          service:
            name: modulefederation-amecafe-microfront-service-dev
            port:
              number: 4212
  tls:
  - hosts:
    - front.v30.ultrasist.net
    secretName: v30certs
